# liveback

./: .gitignore  LICENSE  README.md  design.md  main.py  pyproject.toml
src/: broker.py  data_client.py  engine.py  event_bus.py  execution_client.py  noop_strategy.py  persistence.py  portfolio.py  report_generator.py  risk_manager.py  strategy.py  types.py
src/data/: data_client.py
src/execution/: execution_client.py
src/reporting/: __init__.py  metrics.py  report_generator.py
src/strategy/: noop_strategy.py  strategy.py
src/tests/: test_broker.py  test_data_client.py  test_engine.py  test_event_bus.py  test_execution_client.py  test_portfolio.py  test_reporting.py  test_risk_manager.py  test_types.py
src/utils/: visualization.py
