[project]
name = "liveback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "dash",
    "streamlit",
    "scipy",
    "scikit-learn",
    "pyarrow",
    "yfinance",
]
