[project]
name = "liveback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "dash",
    "streamlit",
    "scipy",
    "scikit-learn",
    "pyarrow",
    "yfinance",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]
